--- a/css/navbar.css
+++ b/css/navbar.css
@@ -1,4 +1,5 @@
-/* Global Styles */
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+
 :root {
     --primary-color: #2E7D32;
     --background-color: #f0f0f0;
@@ -7,12 +8,33 @@
     --border-radius: 5px;
 }
 
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     font-family: var(--font-family);
     margin: 0;
     background-color: var(--background-color);
 }
 
+p {
+    color: #000000;
+}
+
+li {
+    color: #000000;
+    font-weight: bold;
+    font-size: 13px;
+    list-style: none;
+
+}
 /* Navbar */
 .navbar {
     position: fixed;
@@ -133,130 +155,4 @@ body {
 
 .dropdown.active .dropdown-menu {
     display: block;
-}
-
-/* Smooth Scroll */
-html {
-    scroll-behavior: smooth;
-}
-
-/* Slider Section */
-.slider-section {
-    margin-top: 100px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: var(--background-color);
-    padding: 2rem 0;
-}
-
-/* Slider Container */
-.slider {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    width: 90%;
-    max-width: 1280px;
-}
-
-/* Text Section */
-.slider-text {
-    flex: 1;
-    padding: 1rem;
-    max-width: 50%;
-    text-align: right;
-    margin-right: 1rem;  
-}
-
-.slider-text h2 {
-    font-size: 2rem;
-    color: var(--primary-color);
-    margin-bottom: 1rem;
-}
-
-.slider-text p {
-    font-size: 1rem;
-    line-height: 1.6;
-    color: #333;
-}
-
-/* Image Section */
-.slider-images {
-    flex: 1;
-    display: flex;
-    justify-content: flex-end;
-    margin-left: 100px;
-}
-
-.slide {
-    display: none;
-    height: 400px;
-    width: 700px;
-    object-fit: cover;
-    transition: opacity 1s ease-in-out;
-    border-radius: 10px;
-}
-
-.slide.active {
-    display: block;
-}
-
-
-/* Card Section */
-.card-section {
-    margin-top: 20px;
-    padding: 2rem 0;
-    display: flex;
-    justify-content: center;
-}
-
-.card-container {
-    display: flex;
-    gap: 2rem;
-    max-width: 1280px;
-    width: 90%;
-    justify-content: center;
-}
-
-.card {
-    width: 400px;
-    height: auto;
-    border-radius: 10px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    display: flex;
-    flex-direction: column;
-    overflow: hidden;
-    transition: transform 0.3s ease, box-shadow 0.3s ease; /* Smooth transition for hover effects */
-}
-
-.card-image {
-    width: 100%;
-    height: 200px;
-    overflow: hidden;
-}
-
-.card-image img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-
-.card-text {
-    padding: 1rem;
-    background-color: white;
-}
-
-.card h3 {
-    font-size: 1.5rem;
-    margin-bottom: 0.5rem;
-}
-
-.card p {
-    font-size: 1rem;
-    line-height: 1.6;
-}
-
-.card:hover {
-    transform: scale(1.05);
-    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15);
 }
